--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,9 @@
 {
-  "type": "module",
   "name": "poc-angular-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js"
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/naygo/poc-angular-express#readme",
   "dependencies": {
-    "@angular/platform-server": "^16.0.2",
+    "@angular/compiler": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
+    "@angular/platform-server": "^16.0.3",
     "@nguniversal/express-engine": "^16.0.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.0.4"
   }
 }
