--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-server": "^16.0.2",
     "@angular/router": "^16.0.0",
     "@angular/upgrade": "^16.0.2",
     "rxjs": "~7.8.0",
