--- a/api/package.json
+++ b/api/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "poc-angular-express",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/naygo/poc-angular-express.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/naygo/poc-angular-express/issues"
-  },
-  "homepage": "https://github.com/naygo/poc-angular-express#readme",
   "dependencies": {
-    "@angular/compiler": "^16.0.3",
-    "@angular/platform-browser-dynamic": "^16.0.3",
-    "@angular/platform-server": "^16.0.3",
-    "@nguniversal/express-engine": "^16.0.2",
     "express": "^4.18.2",
-    "typescript": "^5.0.4"
+    "express-engine": "^1.0.1"
   }
 }
